# ParallelFileProcessor

./: CMakeLists.txt  README.md  controller.cpp  controller.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
